--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +19,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'http://10.0.15.215:8079/nexus/content/repositories/HxAndroid/' }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
@@ -23,9 +32,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    buildToolsVersion = '24.0.2'
-    compileSdkVersion = 24
+    buildToolsVersion = '25.0.2'
+    compileSdkVersion = 25
     minSdkVersion = 9
-    targetSdkVersion = 24
-    supportLibraryVersion = '24.2.1'
+    targetSdkVersion = 25
+    supportLibraryVersion = '27.1.1'
 }
