--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -22,15 +22,26 @@ android {
         applicationId 'com.google.android.cameraview.demo'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 10000
         versionName '1.0'
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
+    }
+    signingConfigs {
+
+        release {
+            keyAlias 'wuhanhxqc'
+            keyPassword 'wuhanhxqc1126'
+            storeFile file("mall.keystore")
+            storePassword 'hxqc1126'
+            v2SigningEnabled true
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -40,6 +51,7 @@ dependencies {
     compile "com.android.support:design:$supportLibraryVersion"
     compile project(':library')
 
+    api "com.hxqc:common:1.0.9"
     // Tests
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test:runner:0.5') {
