--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -24,7 +24,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 10000
         versionName '1.0'
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+
         vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
@@ -47,17 +47,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:design:$supportLibraryVersion"
-    compile project(':library')
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api "com.android.support:design:$supportLibraryVersion"
+    api project(':library')
 
     api "com.hxqc:common:1.0.9"
-    // Tests
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test:runner:0.5') {
-        exclude module: 'support-annotations'
-    }
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
-        exclude module: 'support-annotations'
-    }
+
 }
